apps/trivy-operator/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trivy-system
  labels:
    pod-security.kubernetes.io/enforce: baseline
