apps/trivy-operator/base/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trivy-operator-dashboard
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.kubernetes.io/target: ingress.home.arpa
    external-dns.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/instance: trivy-operator-dashboard
    app.kubernetes.io/name: trivy-operator-dashboard
    external-dns.invertedorigin.com/enabled: "true"
spec:
  ingressClassName: cilium
  rules:
  - host: trivy.invertedorigin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trivy-operator-dashboard
            port:
              number: 8900
  tls:
  - hosts:
    - trivy.invertedorigin.com
    secretName: trivy-operator-dashboard-tls-domain
